src/styles/markdown.css
@import 'medium-zoom/dist/style.css';
@import 'rehype-callouts/theme/vitepress';
@import url('https://unpkg.com/katex@0.16.11/dist/katex.min.css');

/* Prose Complement */
.prose {
  --fg-light: #888;
  --fg: #555;
  --fg-deep: #222;
  --fg-deeper: var(--c-text);

  color: var(--fg);
}

.prose a {
  font-weight: inherit;
  text-decoration: none;
  border-bottom: 1px solid rgba(125, 125, 125, 0.3);
  transition: border 0.3s ease-in-out;
}

.prose a:hover {
  border-bottom: 1px solid var(--fg);
}

.prose a code {
  color: inherit;
}

.prose hr {
  width: 50px;
  margin: 2em auto;
}

html.dark .prose {
  --fg-light: #888;
  --fg: #bbb;
  --fg-deep: #ddd;
  --fg-deeper: var(--c-text);
}

.prose blockquote {
  font-weight: normal;
  font-style: normal;
  line-height: 1.6em;
  padding: 0.5em 1em;
  margin-left: -1.1em;
}

.prose blockquote>* {
  opacity: 0.7;
}

.prose blockquote> :first-child {
  margin-top: 0;
}

.prose blockquote> :last-child {
  margin-bottom: 0;
}

.prose blockquote p:first-of-type::before {
  content: none;
}

.prose blockquote p:first-of-type::after {
  content: none;
}

.prose s {
  opacity: 0.5;
}

.prose em {
  --uno: 'font-serif';
  color: var(--fg-deep);
  font-size: 1.05em;
}

.prose pre:not(.expressive-code) {
  padding: 0;
  margin: 0;
  background: transparent;
}

.prose details summary {
  padding-left: 1px;
  cursor: pointer;
}

.prose details {
  margin-top: 1.25em;
  margin-bottom: 1.25em;
}

.prose li details {
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

.prose thead th,
.prose tbody td:first-child {
  white-space: nowrap;
}

.prose code:not(.expressive-code code) {
  border-radius: 0.25rem;
  padding: 0.15rem 0.3rem;
  --uno: 'bg-[#88888820] dark:bg-[#88888830]';
}

/* Toc */
.table-of-contents {
  z-index: 100;
  position: fixed;
  top: 142px;
  bottom: 0;
  left: 20px;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  --uno: 'lt-lg:hidden';

  width: 250px;

  font-size: 0.8em;
}

.table-of-contents-anchor {
  display: flex;
  align-items: center;

  padding-left: 0.8rem;

  font-size: 1rem;
  opacity: 0.3;
  transition: all 700ms;
}

*:hover>.table-of-contents>.table-of-contents-anchor,
.toc-always-on .table-of-contents>.table-of-contents-anchor {
  opacity: 1;
}

.table-of-contents>ul {
  overflow-y: auto;

  height: 100%;
  padding-bottom: 1.25rem;
  margin-top: 0.25rem;

  opacity: 0;
  transition: all 700ms;
}

.toc-always-on .table-of-contents>ul {
  opacity: 0.6;
}

*:hover>.table-of-contents>ul {
  opacity: 0.75;
}

.table-of-contents ul>li::before {
  display: none;
}

.table-of-contents ul>li {
  padding-left: 0.8rem;
  margin-top: 0.5em;

  line-height: 1.6em;
}

.table-of-contents ul>li>a {
  display: block;
  overflow-x: hidden;

  border-bottom: 0px;

  color: var(--c-text);
  text-overflow: ellipsis;
  white-space: nowrap;

  opacity: 0.75;
  --uno: 'hover:op-100';
  transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
}

.table-of-contents ul>li>a:hover {
  border-bottom: 0px;
}

.table-of-contents-right.table-of-contents {
  left: auto;
  right: 32px;
}

.table-of-contents-right .table-of-contents-anchor {
  align-self: flex-end;
}

/* Expressive Code */
.expressive-code {
  margin: 0.5em 0;
}

.expressive-code .title {
  overflow: auto !important;
}

.expressive-code .copy button::before {
  display: none;
}

.expressive-code .copy button {
  width: 2rem !important;
  height: 2rem !important;
}

.expressive-code .copy button::after {
  width: 1rem !important;
  height: 1rem !important;
  opacity: 0.5 !important;
}

.expressive-code .copy button:hover::after,
.expressive-code .copy button:active::after {
  opacity: 1 !important;
}

.expressive-code .copy .feedback {
  font-size: 14px;
  border-width: 0;
}

.expressive-code .ec-section summary .code {
  display: flex;
  align-items: center;
}

.expressive-code .ec-section summary svg {
  display: inline-block;
}

.expressive-code .gutter .ln {
  padding-inline: 1ch !important;
}

/* Medium Zoom */
.medium-zoom-overlay,
.medium-zoom-image--opened {
  z-index: 400;
}

/* rehype-autolink-headings */
a.header-anchor {
  float: left;
  margin-top: 0.125em;
  margin-left: -1.2em;
  padding-right: 0.5em;
  border: 0 !important;
  opacity: 0;
  font-size: 0.85em;
  text-decoration: none;
}

a.header-anchor:hover,
a.header-anchor:focus {
  text-decoration: none;
}

h1:hover .header-anchor,
h1:focus .header-anchor,
h2:hover .header-anchor,
h2:focus .header-anchor,
h3:hover .header-anchor,
h3:focus .header-anchor,
h4:hover .header-anchor,
h4:focus .header-anchor,
h5:hover .header-anchor,
h5:focus .header-anchor,
h6:hover .header-anchor,
h6:focus .header-anchor {
  opacity: 0.5;
}

/* rehype-callouts */
.callout {
  padding-left: 16px;
  font-size: 15px;
}

.callout .callout-icon {
  padding-right: 2px;
}

.callout p {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

/* :::iamge-* */
.prose img {
  margin-inline: auto;
}

.prose figure img,
.prose figure p {
  margin-block: 0;
}

.prose p>img {
  border-radius: 0.5rem;
}

.dark .img-light {
  display: none;
}

html:not(.dark) .img-dark {
  display: none;
}

/* ::vedio */
.prose .sugar-video {
  z-index: 150;
  position: relative;
  margin: 1rem 0;
  border-radius: 0.5rem;
  aspect-ratio: 16 / 9;
}

.prose .sugar-video iframe {
  width: 100%;
  border-radius: 0.5rem;
  aspect-ratio: 16 / 9;
}

@media (min-width: 1024px) {
  .prose .sugar-video {
    margin: 5rem 0;
  }

  .prose .sugar-video iframe {
    transform: scaleX(1.2) scaleY(1.2);
  }
}

/* :link */
[data-link='github-acct'],
[data-link='custom-url'].rounded {
  display: inline-flex;
  align-items: center;
  padding-right: 0.5rem;
  border-radius: 9999px;
  border-width: 0px !important;

  --uno: 'font-condensed';
  color: var(--fg-light) !important;
  font-size: 0.875rem;
  line-height: 1.25rem;

  background: #8882;
  transform: translateY(6px);
  transition: all 300ms ease-in-out !important;
}

[data-link='github-acct']>img,
[data-link='custom-url'].rounded>img {
  display: inline-block;
  height: 1.6em;
  width: 1.6em;
  border-radius: 50%;
  margin: 0 0.25rem 0 0;

  object-fit: cover;
}

[data-link='github-repo']:not(.github),
[data-link='custom-url'].square {
  display: inline-flex;
  align-items: center;
  padding: 0.25rem 0.375rem;
  border-radius: 0.25rem;
  border-width: 0px !important;

  --uno: 'font-condensed';
  color: var(--fg-light) !important;
  line-height: 100%;

  background: #8882;
  transform: translateY(3px);
  transition: all 300ms ease-in-out !important;
}

[data-link='github-repo']:not(.github)>img,
[data-link='custom-url'].square>img {
  display: inline-block;
  height: 1.1em;
  width: 1.1em;
  border-radius: 2px;
  margin: 0 0.25rem 0 0;

  object-fit: cover;
}

[data-link='github-acct']:hover,
[data-link='github-repo']:not(.github):hover,
[data-link='custom-url'].rounded:hover,
[data-link='custom-url'].square:hover {
  color: var(--fg) !important;

  background: #8883;
}

[data-link='github-repo'].github,
[data-link='npm-pkg'] {
  --uno: 'font-mono';
}

[data-link='custom-url']>img,
[data-link='github-repo'].github>img,
[data-link='npm-pkg']>img {
  display: inline-block;
  width: 1.05em;
  height: 1.05em;
  border-radius: 0;
  margin: 0 0.25rem 0.2rem 0.1rem;
}

/* :badge */
.rds-badge {
  display: inline-block;

  padding: 0.125rem 0.375rem;
  border-radius: 0.25rem;
  margin-right: 0.5rem;

  color: white;
  font-size: 0.75rem;
  line-height: 1rem;
  text-transform: uppercase;

  background-color: var(--badge-color-light, #a8a29e);
}

.dark .rds-badge {
  color: black;
  background-color: var(--badge-color-dark, #a8a29e);
}

[data-badge='n'] {
  --badge-color-light: #f87171;
  --badge-color-dark: #fecaca;
}

[data-badge='a'] {
  --badge-color-light: #fb923c;
  --badge-color-dark: #fed7aa;
}

[data-badge='v'] {
  --badge-color-light: #facc15;
  --badge-color-dark: #fef08a;
}

/* rehype-external-links */
.new-tab-icon {
  margin-left: 0.1rem;
  margin-bottom: 0.3rem;

  font-size: 0.6em;
}

.external-link-cursor {
  cursor: var(--external-link-cursor);
}

